applications/prd/we-wallet/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: we-wallet-prd
  labels:
    app: we-wallet
    environment: production
