applications/prd/we-wallet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: we-wallet
  namespace: we-wallet-prd
  labels:
    app: we-wallet
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: we-wallet
