applications/prd/we-wallet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: we-wallet
  namespace: we-wallet-prd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
  - hosts:
    - wecampus.trywefood.dev
    - wallet.trywefood.dev
    secretName: we-wallet-tls
  
  rules:
  - host: wecampus.trywefood.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: we-wallet
            port:
              number: 80
  - host: wallet.trywefood.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: we-wallet
            port:
              number: 80
